:sparkles: feat(util.css): Added more util styles for displays, added height modifiers, fixed spacing in rows for mobile, fixed drselect SVG appearance

--- a/src/core/forms.css
+++ b/src/core/forms.css
@@ -69,7 +69,7 @@ select[multiple] option {
 
 /* Fixes for Safari and other browsers for consistent UI */
 select.select:not([size]):not([multiple]) {
-    background: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%204%205'%3E%3Cpath%20fill='%23667189'%20d='M2%200L0%202h4zm0%205L0%203h4z'/%3E%3C/svg%3E") no-repeat right .35rem center/.4rem .5rem;
+    background: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%204%205'%3E%3Cpath%20fill='%23667189'%20d='M2%200L0%202h4zm0%205L0%203h4z'/%3E%3C/svg%3E") no-repeat right .85rem center/.5rem .6rem no-repeat;
     -webkit-appearance: none;
 }
 
