--- a/src/core/layout.css
+++ b/src/core/layout.css
@@ -484,6 +484,47 @@ space.x-large {
     width: 100%;
 }
 
+/* Height CSS */
+.h-10 {
+    height: 10%;
+}
+
+.h-20 {
+    height: 20%;
+}
+
+.h-30 {
+    height: 30%;
+}
+
+.h-40 {
+    height: 40%;
+}
+
+.h-50 {
+    height: 50%;
+}
+
+.h-60 {
+    height: 60%;
+}
+
+.h-70 {
+    height: 70%;
+}
+
+.h-80 {
+    height: 80%;
+}
+
+.h-90 {
+    height: 90%;
+}
+
+.h-100 {
+    height: 100%;
+}
+
 @media screen and (min-width: 769px) {
 
     .row {
@@ -515,14 +556,8 @@ space.x-large {
     .row [class*=" col-"]:not(.ignore-screen) {
         /* Remove the grid structure for smaller screens */
         width: 100%;
-        margin-top: 1rem;
         margin-left: 0;
-    }
-
-    /* Increase space with cards */
-    .row [class^="col-"]:not(.ignore-screen),
-    .row [class*=" col-"]:not(.ignore-screen) {
-        margin-top: 1rem;
+        padding: 0;
     }
 
     /* .fluid-container { DEPRECATED 0.5.5
