--- a/src/ext/card.css
+++ b/src/ext/card.css
@@ -107,7 +107,6 @@
 .card button,
 .card .btn {
     display: inline-block;
-    display: inline-block;
     border-color: transparent;
 }
 
